CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )

PROJECT ( Antons_OpenGL_Tutorials_Book )

FIND_PACKAGE ( OpenGL REQUIRED )
FIND_PACKAGE ( GLEW REQUIRED )
FIND_PACKAGE ( GLFW3 REQUIRED )

INCLUDE_DIRECTORIES (
  ${GLEW_INCLUDE_DIR}
  ${GLFW3_INCLUDE_DIR}
  )

IF (UNIX AND NOT APPLE)
  SET ( GLFW_REQUIRED_X11_LIBRARIES
        Xi
        Xrandr
        Xinerama
        Xcursor
        )
ENDIF ()

IF (APPLE)
  FIND_LIBRARY ( COCOA_LIBRARY Cocoa )
  FIND_LIBRARY ( IOKIT_LIBRARY IOKit )
  FIND_LIBRARY ( COREVIDEO_LIBRARY CoreVideo )
  ADD_DEFINITIONS ( -DAPPLE )
ENDIF ()

IF (WIN32)
  ADD_DEFINITIONS ( -DGLEW_STATIC )
ENDIF ()

SET ( GLEW_REQUIRED_LIBARIES
  ${GLEW_GLEW_LIBRARY}
  ${GLEW_GLEWmx_LIBRARY}
  )

SET ( GLFW_REQUIRED_LIBRARIES 
  ${OPENGL_gl_LIBRARY}
  ${OPENGL_glu_LIBRARY}
  ${GLFW3_glfw_LIBRARY}
  ${GLEW_REQUIRED_LIBARIES}
  # UNIX
  ${GLFW_REQUIRED_X11_LIBRARIES}
  # APPLE
  ${COCOA_LIBRARY}
  ${IOKIT_LIBRARY}
  ${COREVIDEO_LIBRARY}
  )

ADD_SUBDIRECTORY ( 00_hello_triangle )
